Bug 1226473 - Support AXSelectedTextMarkerRange. r=morgan

To do this well we need to cache the text selection in the top level process.

Differential Revision: https://phabricator.services.mozilla.com/D82111